--- a/README.rdoc
+++ b/README.rdoc
@@ -26,11 +26,11 @@ script.aculo.us includes the Prototype JavaScript Framework
 V1.6.0. You can use later versions, as they become available 
 (see http://prototypejs.org/).
 
-Put prototype.js, and the six files scriptaculous.js, 
-builder.js, effects.js, dragdrop.js, controls.js and slider.js 
+Put prototype.js, and the files scriptaculous.js,
+effects.js, dragdrop.js, controls.js and slider.js
 in a directory of your website, e.g. /javascripts.
 
-(The sound.js and unittest.js files are optional)
+(unittest.js is optional)
 
 Now, you can include the scripts by adding the following 
 tags to the HEAD section of your HTML pages:
